Avançado no desenvolvimento do jogo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <title>PokeBattle</title>
-    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/general-styles.css">
     <link rel="stylesheet" href="./styles/index.css">
 
 </head>
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <button>Estou pronto!</button>
+        <a id="button" href="pages/choice.html">Estou pronto!</a>
     </main>
 </body>
 </html>
