Modificado alguns estilos

--- a/pages/choice.html
+++ b/pages/choice.html
@@ -18,6 +18,9 @@
         <div class="card">
             <img src="" alt="">
             <span>Nome do pokemon</span>
+            <span>Força</span>
+            <span>Defesa</span>
+            <span>Nome do pokemon</span>
         </div>
         <div class="card">
             <img src="" alt="">
