Avançado no desenvolvimento do jogo

--- a/pages/choice.html
+++ b/pages/choice.html
@@ -15,18 +15,18 @@
     </header>
 
     <main>
-        <div class="card">
+        <div onclick="escolheuBulbasaur()" class="card">
             <img src="" alt="">
-            <span>Nome do pokemon</span>
+            <span>Bulbasaur</span>
             <span>Força</span>
             <span>Defesa</span>
             <span>Nome do pokemon</span>
         </div>
-        <div class="card">
+        <div onclick="escolheuCharmander()" class="card">
             <img src="" alt="">
-            <span>Nome do pokemon</span>
+            <span>Charmander</span>
         </div>
-        <div class="card">
+        <div onclick="escolheuSquirtle()" class="card">
             <img src="" alt="">
             <span>Nome do pokemon</span>
         </div>
@@ -39,5 +39,7 @@
             <span>Nome do pokemon</span>
         </div>
     </main>
+
+    <script src="../scripts/poke-battle.js"></script>
 </body>
 </html>
