Criado a função para mostrar os pokemons nos cards

--- a/pages/choice.html
+++ b/pages/choice.html
@@ -14,31 +14,7 @@
         <p>Pronto para a batalha?</p>
     </header>
 
-    <main>
-        <div onclick="escolheuBulbasaur()" class="card">
-            <img src="" alt="">
-            <span>Bulbasaur</span>
-            <span>Força</span>
-            <span>Defesa</span>
-            <span>Nome do pokemon</span>
-        </div>
-        <div onclick="escolheuCharmander()" class="card">
-            <img src="" alt="">
-            <span>Charmander</span>
-        </div>
-        <div onclick="escolheuSquirtle()" class="card">
-            <img src="" alt="">
-            <span>Nome do pokemon</span>
-        </div>
-        <div class="card">
-            <img src="" alt="">
-            <span>Nome do pokemon</span>
-        </div>
-        <div class="card">
-            <img src="" alt="">
-            <span>Nome do pokemon</span>
-        </div>
-    </main>
+    <main id="main"></main>
 
     <script src="../scripts/poke-battle.js"></script>
 </body>
