Avançado no desenvolvimento do jogo

--- a/pages/choice.html
+++ b/pages/choice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,21 @@
     <link rel="stylesheet" href="../styles/general-styles.css">
     <link rel="stylesheet" href="../styles/choice.css">
 </head>
+
 <body>
     <header>
         <h1>Poke<span>Battle</span></h1>
         <p>Pronto para a batalha?</p>
     </header>
 
-    <main id="main"></main>
+    <main id="main">
+        <div id="mensagem">
+            <span id="mensagemSpan"></span>
+            <a href="./battle.html">Começar</a>
+        </div>
+    </main>
 
     <script src="../scripts/poke-battle.js"></script>
 </body>
+
 </html>
