Avançado no desenvolvimento do jogo

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
     <main>
         <a id="button" href="pages/choice.html">Estou pronto!</a>
     </main>
+
+    <script src="scripts/pokemons.js"></script>
 </body>
 </html>
